Update RegistrationFormNh.java
resolving problems